<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.phash.mvp</groupId>
  <artifactId>mvptree</artifactId>
  <version>0.1-SNAPSHOT</version>
  <packaging>jar</packaging>
  <name>mvptree</name>
  <url>https://repo.maven.apache.org/maven2</url>
  <repositories>
	<repository>
	  <id>neo4j-snapshot-repository</id>
	  <name>Maven 2 Snapshot Repository for neo4j</name>
	  <url>http://m2.neo4j.org/content/repositories/snapshots</url>
	  <snapshots><enabled>true</enabled></snapshots>
	  <releases><enabled>false</enabled></releases>
	</repository>
  </repositories>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	<maven.compiler.source>1.8</maven.compiler.source>
	<maven.compiler.target>1.8</maven.compiler.target>
	<neo4j.version>3.0.1</neo4j.version>
  </properties>
  <build>
	<resources>
	  <resource>
		<directory>src/main/resources</directory>
	  </resource>
	</resources>
	<testResources>
	  <testResource>
		<directory>src/test/resources</directory>
	  </testResource>
	  <testResource>
		<directory>src/main/resources</directory>
	  </testResource>
	</testResources>
	<plugins>
	  <plugin>
		<artifactId>maven-clean-plugin</artifactId>
		<version>3.0.0</version>
		<configuration>
		  <filesets>
			<fileset>
			  <directory>var</directory>
			</fileset>
		  </filesets>
		</configuration>
	  </plugin>
	  <plugin>
		<artifactId>maven-resources-plugin</artifactId>
		<version>2.7</version>
		<executions>
		  <execution>
			<id>copy-resources</id>
			<phase>validate</phase>
			<goals>
			  <goal>copy-resources</goal>
			</goals>
			<configuration>
			  <outputDirectory>${basedir}/target</outputDirectory>
			  <resources>
				<resource>
				  <directory>src/main/resources</directory>
				  <filtering>true</filtering>
				</resource>
			  </resources>
			</configuration>
		  </execution>
		</executions>
	  </plugin>
	  <plugin>
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-compiler-plugin</artifactId>
		<version>3.5.1</version>
		<configuration>
		  <verbose>true</verbose>
		  <fork>true</fork>
		  <executable>${JAVA_HOME}/bin/javac</executable>
		  <compilerVersion>1.8</compilerVersion>
		</configuration>
	  </plugin>
	  <plugin>
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-shade-plugin</artifactId>
		<version>2.4.3</version>
		<executions>
		  <execution>
			<phase>package</phase>
			<goals>
			  <goal>shade</goal>
			</goals>
			<configuration>
			</configuration>
		  </execution>
		</executions>
	  </plugin>
	  <plugin>
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-javadoc-plugin</artifactId>
		<version>3.0.1</version>
		<configuration>
		  <show>public</show>
		  <nohelp>true</nohelp>
		  <stylesheetfile>${basedir}/stylesheet.css</stylesheetfile>
		</configuration>
		<executions>
		  <execution>
			<id>attach-javadocs</id>
			<goals>
			  <goal>jar</goal>
			</goals>
		  </execution>
		</executions>
	  </plugin>
	  <plugin>
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-surefire-plugin</artifactId>
		<version>2.22.0</version>
		<configuration>
		  <argLine>-Xms256M -XX:+UseG1GC -XX:+AggressiveOpts</argLine>
		</configuration>
	  </plugin>
	</plugins>
  </build>
  <dependencies>
	<dependency>
      <groupId>org.neo4j</groupId>
      <artifactId>neo4j-community</artifactId>
      <version>${neo4j.version}</version>
	  <type>pom</type>
      <scope>compile</scope>
	</dependency>
	<dependency>
	  <groupId>org.apache.commons</groupId>
	  <artifactId>commons-lang3</artifactId>
	  <version>3.7</version>
	</dependency>
	<dependency>
	  <groupId>com.beust</groupId>
	  <artifactId>jcommander</artifactId>
	  <version>1.30</version>
	  <scope>compile</scope>
	</dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
